argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-ingress
  namespace: argocd

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - argocd.tm.thangns.id.vn
      secretName: argocd-tls

  rules:
    - host: argocd.tm.thangns.id.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
